# FedPhish

./: .gitignore  README.md  push_to_github.sh
capstone/: README.md
capstone/adaptive_adversarial_fl/: CODE_REVIEW.md  README.md  pyproject.toml  requirements.txt
capstone/adaptive_adversarial_fl/config/: attacks.yaml  base.yaml  coevolution.yaml  defenses.yaml
capstone/adaptive_adversarial_fl/experiments/: run_coevolution.py
capstone/adaptive_adversarial_fl/experiments/scenarios/: backdoor_vs_honeypot.yaml  full_arms_race.yaml  label_flip_vs_anomaly.yaml
capstone/adaptive_adversarial_fl/src/: __init__.py
capstone/adaptive_adversarial_fl/src/attacks/: __init__.py  backdoor.py  base.py  evasion_poisoning.py  label_flip.py  model_poisoning.py
capstone/adaptive_adversarial_fl/src/coevolution/: __init__.py  analyzer.py  history.py  round.py  simulator.py
capstone/adaptive_adversarial_fl/src/defenses/: __init__.py  base.py  gradient_forensics.py  honeypot.py  multi_round_anomaly.py
capstone/adaptive_adversarial_fl/src/evaluation/: __init__.py  metrics.py  reporting.py  visualization.py
capstone/adaptive_adversarial_fl/src/fl/: __init__.py  aggregation.py  client.py  server.py
capstone/adaptive_adversarial_fl/src/game_theory/: __init__.py  equilibrium.py  payoff_matrix.py  utility.py
capstone/adaptive_adversarial_fl/src/utils/: __init__.py  data.py  models.py  seeding.py
capstone/adaptive_adversarial_fl/tests/test_attacks/: test_label_flip.py
capstone/adaptive_adversarial_fl/tests/test_coevolution/: test_simulator.py
capstone/adaptive_adversarial_fl/tests/test_defenses/: test_multi_round_anomaly.py
capstone/adaptive_adversarial_fl/tests/test_game_theory/: test_utility.py
capstone/fedphish/: CODE_REVIEW.md  README.md  REPRODUCE.md  pyproject.toml  requirements.txt
capstone/fedphish/api/: main.py  training_state.py
capstone/fedphish/configs/: base.yaml
capstone/fedphish/deploy/: Dockerfile  docker-compose.yml
capstone/fedphish/deploy/kubernetes/: deployment.yaml
capstone/fedphish/docs/: ARCHITECTURE.md
capstone/fedphish/experiments/: run_attack_eval.py  run_benchmark.py  run_federated.py  run_privacy_eval.py
capstone/fedphish/fedphish/: __init__.py
capstone/fedphish/fedphish/client/: model.py  privacy.py  prover.py  trainer.py
capstone/fedphish/fedphish/detection/: ensemble.py  explainer.py  features.py  transformer.py
capstone/fedphish/fedphish/privacy/: dp.py  he.py  ht2ml.py  tee.py
capstone/fedphish/fedphish/security/: attacks.py  defenses.py  zkp.py
capstone/fedphish/fedphish/server/: aggregator.py  defense.py  reputation.py  verifier.py
capstone/fedphish/fedphish/utils/: data.py  metrics.py  visualization.py
capstone/fedphish/tests/: test_privacy.py  test_utils.py
capstone/fedphish/tests/integration/: test_federated_training.py
capstone/fedphish_benchmark/: CODE_REVIEW.md  README.md  main.py  pyproject.toml  requirements.txt
capstone/fedphish_benchmark/config/: benchmark.yaml
capstone/fedphish_benchmark/config/attack/: backdoor.yaml  label_flip.yaml  model_poisoning.yaml
capstone/fedphish_benchmark/config/dataset/: phishing.yaml
capstone/fedphish_benchmark/config/federation/: centralized.yaml  fedavg.yaml  fedprox.yaml  privacy_fl.yaml
capstone/fedphish_benchmark/config/model/: classical_ml.yaml  multi_agent.yaml  privacy_gbdt.yaml  transformer.yaml
capstone/fedphish_benchmark/scripts/: __init__.py  quick_test.sh  run_benchmark.sh  test_experiment.py
capstone/fedphish_benchmark/src/: __init__.py
capstone/fedphish_benchmark/src/artifacts/: __init__.py  figures.py  latex.py
capstone/fedphish_benchmark/src/attacks/: __init__.py  backdoor.py  label_flip.py  model_poisoning.py
capstone/fedphish_benchmark/src/data/: __init__.py  attack_injector.py  loader.py  partitioner.py
capstone/fedphish_benchmark/src/experiments/: __init__.py  benchmark.py  runner.py  statistical.py
capstone/fedphish_benchmark/src/fl/: __init__.py  client.py  privacy.py  server.py  strategies.py
capstone/fedphish_benchmark/src/metrics/: __init__.py  classification.py  efficiency.py  fairness.py  privacy.py  robustness.py
capstone/fedphish_benchmark/src/utils/: __init__.py  checkpoint.py  logging.py  reproducibility.py
capstone/fedphish_benchmark/tests/: __init__.py
capstone/fedphish_benchmark/tests/test_attacks/: __init__.py
capstone/fedphish_benchmark/tests/test_benchmark/: __init__.py  test_correctness.py
capstone/fedphish_benchmark/tests/test_data/: test_partitioner.py
capstone/fedphish_benchmark/tests/test_fl/: __init__.py  test_strategies.py
capstone/fedphish_benchmark/tests/test_metrics/: __init__.py
capstone/fedphish_benchmark/tests/test_models/: test_classical.py
documentation/: ALL_PROJECTS_REVIEWED.md  CODE_REVIEW_COMPLETE.md  CODE_REVIEW_MASTER_SUMMARY.md  CODE_REVIEW_PROGRESS.md  CODE_REVIEW_RESULTS.md  CRITICAL_ISSUES_FIXED.md  FINAL_CODE_REVIEW_SUMMARY.md  FINAL_IMPROVEMENTS_SUMMARY.md  Federated_Phishing_Detection_Projects.md  PROJECT_IMPROVEMENTS_SUMMARY.md  REMAINING_PROJECTS_AUDIT.md
federated-classifiers/: README.md
foundations/: README.md
foundations/multi_agent_phishing_detector/: CODE_REVIEW.md  README.md  pyproject.toml  requirements.txt
foundations/multi_agent_phishing_detector/src/: main.py
foundations/phishing_email_analysis/: CODE_REVIEW.md  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml
foundations/phishing_email_analysis/src/: __init__.py
foundations/unified-phishing-api/: CODE_REVIEW.md  Dockerfile  PHASE1_COMPLETED.md  PHASE2_COMPLETED.md  QUICKSTART.md  README.md  TRAINING_QUICKSTART.md  docker-compose.yml  pyproject.toml  requirements.txt
foundations/unified-phishing-api/app/: main.py
foundations/unified-phishing-api/app/api/v1/routes/: analyze.py  feedback.py  health.py  models.py
foundations/unified-phishing-api/app/middleware/: logging.py  metrics.py
foundations/unified-phishing-api/app/services/: cache.py  feature_extractor.py  model_service.py  risk_calculator.py  url_analyzer.py
privacy-techniques/: README.md
verifiable-fl/: README.md
(+250 files in other folders)
