[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedphish-benchmark"
version = "1.0.0"
description = "Comprehensive benchmark for federated phishing detection research"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Research", email = "research@fedphish.edu"}
]
license = {text = "MIT"}
dependencies = [
    "torch>=2.0.0",
    "flwr>=1.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "mlflow>=2.8.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "opacus>=1.3.0",
    "torchvision>=0.15.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "scipy>=1.11.0",
    "pillow>=10.0.0",
    "accelerate>=0.24.0",
    "peft>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html"
