[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-email-analysis"
version = "0.1.0"
description = "Feature engineering pipeline for phishing email detection in financial services"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Phishing Detection Research"}
]
keywords = ["phishing", "email-security", "federated-learning", "financial-fraud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    # Core data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # NLP
    "nltk>=3.8.0",
    "spacy>=3.6.0",
    "textstat>=0.7.3",

    # Machine Learning
    "scikit-learn>=1.3.0",
    "shap>=0.42.0",
    "xgboost>=2.0.0",

    # Email parsing
    "defusedxml>=0.7.1",  # Secure XML parsing
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",

    # URL analysis
    "tldextract>=3.4.0",
    "validators>=0.20.0",
    "dnspython>=2.3.0",  # For DNS-based domain age

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",

    # Utilities
    "tqdm>=4.65.0",
    "python-Levenshtein>=0.20.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
